--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,6 +9,16 @@
     <body>
         <div>FIMCalc: <a href="/index">Home</a></div>
         <hr>
+        <hr>
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        <ul>
+            {% for message in messages %}
+            <li>{{ message }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %}
+        {% endwith %}
         {% block content %}{% endblock %}
     </body>
 </html>
